28回目の議事録を書きました (#34)
* 28回目の議事録

* Update 028-api-dev.md